added new projects, slightly edited existing projects

--- a/src/projects/Jukebox.mdx
+++ b/src/projects/Jukebox.mdx
@@ -4,7 +4,7 @@ slug: "/jukebox"
 date: 2023-09-12
 repo: "https://github.com/ufosc/Jukebox-Frontend"
 description: "A web application that allows group members to queue up songs to their group’s playlist, and enables members to collect points for future use."
-maintainers: ["Isaac Hunter", "Jonathan Mesa"]
+maintainers: ["Isaac Hunter", "Jonathan Hooth", "Jonathan Mesa (Former)"]
 tags: ['javascript', 'mongodb', 'react', 'nodejs']
 ---
 
