--- a/src/projects/StudyGatchi.mdx
+++ b/src/projects/StudyGatchi.mdx
@@ -8,7 +8,7 @@ maintainers: ["Anthony Le", "Anthony Thisse", "Andres De La Flor"]
 tags: ['typescript', 'react', 'django', 'postgressql', 'figma']
 ---
 
-Combining the concepts of studying, gachapon, and Tamogotchi, Studygatchi is a productivity-focused Chromium/Firefox extension where you are incentivised to study to take care of a pet and to gamble for gifts and accessories for your pet. Study and stay on task to take care of your little goober guy or otherwise they die (in a variety of ways)! 
+Combining the concepts of studying, gachapon, and Tamogotchi, StudyGatchi is a productivity-focused Chromium/Firefox extension where you are incentivised to study to take care of a pet and to gamble for gifts and accessories for your pet. Study and stay on task to take care of your little goober guy or otherwise they die (in a variety of ways)! 
 
 Inspired by gacha games such as Genshin Impact and Zenless Zone Zero, users will be able to roll for gifts, accessories, and furniture for their pet on an extendable pool of data where users can submit user-generated content on a seperate website. 
 
